--- a/.env.ci
+++ b/.env.ci
@@ -29,14 +29,10 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_DSN="smtp://mailpit:1025"
+MAIL_FROM_ADDRESS="technical-support@publiq.be"
 MAIL_FROM_NAME="${APP_NAME}"
+MAILPIT_DSN="http://mailpit:8025"
 
 MAILJET_EXPIRATION_TIMER_ENTRY_API=6
 MAILJET_EXPIRATION_TIMER_SEARCH_API=6
