--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
         depends_on:
             - mysql
             - redis
-            - mailhog
+            - mailpit
     mysql:
         image: 'mysql/mysql-server:8.0'
         ports:
@@ -56,13 +56,25 @@ services:
             test: ["CMD", "redis-cli", "ping"]
             retries: 3
             timeout: 5s
-    mailhog:
-        image: 'mailhog/mailhog:latest'
+    mailpit:
+        image: axllent/mailpit:latest
+        hostname: 'mailpit'
+        container_name: mailpit.ppf
+        restart: unless-stopped
+        volumes:
+            - 'sail-mailpit:/data'
         ports:
-            - '${FORWARD_MAILHOG_PORT:-1025}:1025'
-            - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
+            - 8025:8025
+            - 1025:1025
         networks:
-            - sail
+            sail:
+                aliases:
+                    - mailpit.ppf.local
+        environment:
+            MP_MAX_MESSAGES: 5000
+            MP_DATABASE: /data/mailpit.db
+            MP_SMTP_AUTH_ACCEPT_ANY: 1
+            MP_SMTP_AUTH_ALLOW_INSECURE: 1
 networks:
     sail:
         driver: bridge
@@ -70,4 +82,6 @@ volumes:
     sail-mysql:
         driver: local
     sail-redis:
+        driver: local
+    sail-mailpit:
         driver: local
