--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,8 +93,8 @@ services:
         volumes:
             - 'platform-mailpit:/data'
         ports:
-            - 8025:8025
-            - 1025:1025
+            - ${MAILPIT_GUI_PORT:-8025}:8025
+            - ${MAILPIT_SMTP_PORT:-1025}:1025
         networks:
             publiq-platform:
                 aliases:
