--- a/.github/workflows/e2e_tests.yml
+++ b/.github/workflows/e2e_tests.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Wait for application to be healthy
         run: |
           for i in {1..60}; do
-            if curl -sSf http://localhost:8000/ > /dev/null; then
+            if curl -sSf http://localhost/ > /dev/null; then
               echo "App is up"; exit 0; fi; echo "Waiting for app..."; sleep 5; done; exit 1
 
       - name: Install app
