--- a/.github/workflows/e2e_tests.yml
+++ b/.github/workflows/e2e_tests.yml
@@ -1,82 +1,93 @@
-name: E2E Playwright (create-integration)
+name: CI
 
 on:
   push:
-  workflow_dispatch:
+  pull_request:
 
 jobs:
-  e2e:
-    name: Run Playwright E2E (single test)
-    runs-on: ubuntu-24.04
+  test:
+    name: Run tests
+    runs-on: ubuntu-latest
 
-    env:
-      E2E_TEST_BASE_URL: http://localhost:8000
-      KEYCLOAK_LOGIN_ENABLED: ${{ secrets.KEYCLOAK_LOGIN_ENABLED || 'false' }}
-      E2E_TEST_ADMIN_EMAIL: ${{ secrets.E2E_TEST_ADMIN_EMAIL }}
-      E2E_TEST_ADMIN_PASSWORD: ${{ secrets.E2E_TEST_ADMIN_PASSWORD }}
-      E2E_TEST_EMAIL: ${{ secrets.E2E_TEST_EMAIL }}
-      E2E_TEST_PASSWORD: ${{ secrets.E2E_TEST_PASSWORD }}
-      E2E_TEST_V1_EMAIL: ${{ secrets.E2E_TEST_V1_EMAIL }}
-      E2E_TEST_V1_PASSWORD: ${{ secrets.E2E_TEST_V1_PASSWORD }}
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ALLOW_EMPTY_PASSWORD: false
+          MYSQL_ROOT_PASSWORD: secret
+          MYSQL_USER: ppf-user
+          MYSQL_PASSWORD: secret
+          MYSQL_DATABASE: testing
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: 📤 Checkout project
+        uses: actions/checkout@v3
 
-      - name: Create .env file
+      - name: 📩 Fetch vendor from cache
+        uses: actions/cache@v3
+        id: cache
+        with:
+          path: vendor
+          key: composer-${{ hashFiles('**/composer.lock') }}
+
+      - name: 🐘 Setup PHP
+        uses: shivammathur/setup-php@master
+        with:
+          php-version: "8.2"
+        env:
+          update: true
+
+      - name: 🐢 Setup NodeJS
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.14
+
+      - name: 🔢 Create .env file
         run: cp .env.ci .env
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-
-      - name: Install Node dependencies
-        run: npm ci
-
-      - name: Install Playwright browsers
-        run: npx playwright install --with-deps chromium
-
-      - name: Install composer dependencies
+      - name: 📦 Install composer dependencies
         run: |
           composer config "http-basic.nova.laravel.com" "${{ secrets.NOVA_USERNAME }}" "${{ secrets.NOVA_PASSWORD }}"
           composer install --quiet --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
 
-      - name: Start application stack
+      - name: 🔑 Generate a laravel key
+        run: php artisan key:generate
+
+      - name: 📂 Migrate database
+        run: php artisan migrate --force
+
+      - name: Install npm dependencies
+        run: npm ci
+
+      - name: 💅🏻 Build frontend assets
+        run: npm run build
+
+      - name: 🎭 Install Playwright browsers
+        run: npx playwright install --with-deps
+
+      - name: 🚀 Start Laravel server
+        run: php artisan serve --host=127.0.0.1 --port=8000 &
+
+      - name: ⏳ Wait for Laravel to boot
         run: |
-          docker compose up -d
+          for i in {1..10}; do
+            if curl -s http://127.0.0.1:8000 > /dev/null; then
+              exit 0
+            fi
+            sleep 2
+          done
+          exit 1
 
-      - name: Ensure writable storage, cache directories and root
-        run: |
-          mkdir -p storage/logs bootstrap/cache
-          sudo chmod -R 777 storage bootstrap/cache
-          sudo chmod -R 777 /var/www/html
-
-      - name: Install app
-        run: make install-e2e
-
-      - name: Run Playwright setup project
-        run: npx playwright test --project=setup
-
-      - name: Run Playwright test (integrator/create-integration)
-        run: >-
-          npx playwright test
-          e2e/tests/integrations/integrator/create-integration.test.ts
-
-      - name: Upload Playwright report
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: playwright-report
-          path: playwright-report
-          retention-days: 7
-
-      - name: Upload Playwright results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: e2e-test-results
-          path: e2e/test-results.xml
-          if-no-files-found: ignore
-          retention-days: 7
+      - name: 🎭 Run Playwright E2E tests
+        env:
+          APP_URL: http://127.0.0.1:8000
+          E2E_TEST_ADMIN_EMAIL: ${{ secrets.E2E_TEST_ADMIN_EMAIL }}
+          E2E_TEST_ADMIN_PASSWORD: ${{ secrets.E2E_TEST_ADMIN_PASSWORD }}
+          E2E_TEST_EMAIL: ${{ secrets.E2E_TEST_EMAIL }}
+          E2E_TEST_PASSWORD: ${{ secrets.E2E_TEST_PASSWORD }}
+          E2E_TEST_V1_EMAIL: ${{ secrets.E2E_TEST_V1_EMAIL }}
+          E2E_TEST_V1_PASSWORD: ${{ secrets.E2E_TEST_V1_PASSWORD }}
+        run: npx playwright test
