--- a/.github/workflows/e2e_tests.yml
+++ b/.github/workflows/e2e_tests.yml
@@ -90,3 +90,14 @@ jobs:
           E2E_TEST_V1_EMAIL: ${{ secrets.E2E_TEST_V1_EMAIL }}
           E2E_TEST_V1_PASSWORD: ${{ secrets.E2E_TEST_V1_PASSWORD }}
         run: npx playwright test
+
+      - name: 📦 Upload Playwright artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-artifacts
+          path: |
+            playwright-report/
+            test-results/
+            **/playwright*.zip
+          retention-days: 7
